# spark

./: .gitignore  CMakeLists.txt  Makefile.am  README  TODO  configure.ac  plot.py
example/: example.yaml  example_nm.yaml  example_nv.yaml  example_sl.yaml
src/: .gitignore  CMakeLists.txt  Doxyfile  Makefile.am  calc_rays.cpp  calc_rays.h  calc_rays.hpp  charODE_ddr.cpp  charODE_ddr.h  charODE_dds.cpp  charODE_dds.h  charODE_dds_new.cpp  charODE_dds_new.h  characteristic.cpp  characteristic.h  characteristic.hpp  combine_tangent_rays.cpp  combine_tangent_rays.hpp  const.h  grid.cpp  grid.h  grid.hpp  griddata.cpp  griddata.h  interpolate.cpp  interpolate.h  main.cpp  misc.cpp  misc.h  my_exceptions.cpp  my_exceptions.h  params.cpp  params.hpp  read_params.cpp  read_params.hpp
src/EOS/: CMakeLists.txt  charged_element.cpp  charged_element.h  const.dek  electron.cpp  electron.h  element.cpp  element.h  implno.dek  neutral_element.cpp  neutral_element.h  public_ionization.f  species.cpp  species.h
src/utils/: CMakeLists.txt  make_linelist_hdf.cpp  make_linelist_hdf.h  make_linelist_hdf.hpp
yaml-cpp/src/: Makefile.am
