AM_CPPFLAGS = ${CPPFLAGS} -I../include
noinst_LIBRARIES = libyamlcpp.a
libyamlcpp_a_SOURCES = binary.cpp \
					 convert.cpp \
					 directives.cpp \
					 emit.cpp \
					 emitfromevents.cpp \
					 emitter.cpp \
					 emitterstate.cpp \
					 emitterutils.cpp \
					 exp.cpp \
					 memory.cpp \
					 nodebuilder.cpp \
					 node.cpp \
					 node_data.cpp \
					 nodeevents.cpp \
					 null.cpp \
					 ostream_wrapper.cpp \
					 parse.cpp \
					 parser.cpp \
					 regex.cpp \
					 scanner.cpp \
					 scanscalar.cpp \
					 scantag.cpp \
					 scantoken.cpp \
					 simplekey.cpp \
					 singledocparser.cpp \
					 stream.cpp \
					 tag.cpp
